--- a/src/main/webapp/css/inputsStyle.css
+++ b/src/main/webapp/css/inputsStyle.css
@@ -24,12 +24,25 @@ form{
 	font-size: 30px;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	flex-direction: column;
 	flex-direction: column;
 	width: 400px;
 	min-height: 500px;
 }
 
+#formTransaccion{
+	background:#47C47F;
+	font-size: 20px;
+	padding:0px;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	flex-direction: column;
+	text-align: center;
+	width: 400px;
+	min-height: 500px;
+}
 label{}
 
 .input, select{
@@ -47,12 +60,26 @@ label{}
 	font-size: 15px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	margin-top: 10px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 	text-transform: capitalize;
 	transition: 0.3s ease-in-out;
 	text-decoration: none;
 }
 
+.confirmarMovimiento{
+	background:#47C47F;
+	font-size: 20px;
+	padding:0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	flex-direction: column;
+	text-align: center;
+	width: 400px;
+	min-height: 500px;
+}
 .btnSubmit:hover {
 	letter-spacing: 3px;
 }
